force-app/main/default/objects/LMS_Monitor_Setting__mdt/LMS_Monitor_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings to allow LMS Monitor components to access to the APIs on the Org (loopback)</description>
    <label>LMS Monitor Setting</label>
    <pluralLabel>LMS Monitor Settings</pluralLabel>
</CustomObject>