force-app/main/default/objects/LMS_Monitor_Setting__mdt/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>JWT Audience</description>
    <inlineHelpText>JWT Audience, URL (ie. https://test.salesforce.com)</inlineHelpText>
    <label>Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>