force-app/main/default/objects/LMS_Monitor_Setting__mdt/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <description>Certificate to use to sign the JWT</description>
    <inlineHelpText>Certificate to use to sign the JWT</inlineHelpText>
    <label>Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>