force-app/main/default/objects/LMS_Monitor_Setting__mdt/fields/ConnectionType__c.field-meta.xml
<CustomField>
    <fullName>ConnectionType__c</fullName>
    <description>Type of the connection to reach the service</description>
    <inlineHelpText>If you choose &quot;Named Credential&quot;, you just have to provide a &quot;Named Credential&quot; and an &quot;Endpoint URL&quot;.
If you choose &quot;Direct access (JWT)&quot; you have to provide &quot;Certificate&quot;, &quot;audience&quot;, &quot;issuer&quot; and a &quot;subject claim&quot;</inlineHelpText>
    <label>Connection type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DirectAccessJWT</fullName>
                <default>true</default>
                <label>Direct Access (JWT)</label>
            </value>
            <value>
                <fullName>NamedCredential</fullName>
                <label>Named Credential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>