force-app/main/default/objects/LMS_Monitor_Setting__mdt/fields/EndPointUrl__c.field-meta.xml
<CustomField>
    <fullName>EndPointUrl__c</fullName>
    <description>Service endpoint used DirectJWT connection type</description>
    <inlineHelpText>DirectJWT connection type field.
Contain the complete URL of the service</inlineHelpText>
    <label>Endpoint Url</label>
    <type>Url</type>
</CustomField>