force-app/main/default/objects/LMS_Monitor_Setting__mdt/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <description>JWT Issuer,</description>
    <inlineHelpText>JWT Issuer, Consumer Key of the Connected App</inlineHelpText>
    <label>Issuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>