force-app/main/default/objects/LMS_Monitor_Setting__mdt/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <description>Named Credential</description>
    <inlineHelpText>Named Credential to use to make the callout</inlineHelpText>
    <label>Named credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>