force-app/main/default/objects/LMS_Monitor_Setting__mdt/fields/Subject_Claim__c.field-meta.xml
<CustomField>
    <fullName>Subject_Claim__c</fullName>
    <description>JWT Subject</description>
    <inlineHelpText>JWT Subject, Username to use to connect to the Connected App</inlineHelpText>
    <label>Subject Claim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>